aggiustamento bottoni successivo e precedente + stile

--- a/razzeCanine/src/index.html
+++ b/razzeCanine/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>RazzeCanine</title>
+  <title>Razze Canine</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://thumbs.dreamstime.com/z/linea-di-stampa-della-zampa-icona-110995645.jpg">
 </head>
 <body>
   <app-root></app-root>
